# scratch_blink_h743

./: Cargo.toml  README.md  build.rs  stm32h743vi_memory.x
.cargo/: config
src/: main.rs
