[package]
name = "scratch_blink"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.10"
stm32h7 = { version = "0.10.0", features = ["stm32h743"] }
stm32h7xx-hal = { version = "0.4.0", features = ["stm32h743", "rt"] }

panic-rtt-core = "0.1.1"
shared-bus = {version = "0.1.4", features = ["cortexm"] }


[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden


